Updated min-height spacing and fixed about me spacing to help viewability on mobile.

--- a/client/src/components/scroll/LocalScroll.css
+++ b/client/src/components/scroll/LocalScroll.css
@@ -1,6 +1,6 @@
 .bottom-link {
   position: absolute;
-  bottom: min(1.5em, 30px);
+  bottom: min(1.5em, 10px);
   display: grid;
   justify-self: center;
 }
