--- a/client/src/screens/contact/Contact.css
+++ b/client/src/screens/contact/Contact.css
@@ -29,22 +29,7 @@
 
 .footer-span {
   position: relative;
-  font-family: 'Special Elite', cursive;
-}
-
-.footer-span::before {
-  position: absolute;
-  content: attr(data-content);
-  top: -5px;
-  left: 0px;
-  color: hsl(4, 90%, 38%);
-  clip-path: polygon(0 0, 0 0, 0% 100%, 0 100%);
-  transition: all 600ms ease-in-out 400ms;
-}
-
-.footer-span:hover::before {
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-  transition: all 200ms ease-in-out;
+  font-family: 'Special Elite', cursive, var(--ff-secondary);
 }
 
 @media screen and (min-width: 600px) {
