--- a/client/src/screens/home/Home.css
+++ b/client/src/screens/home/Home.css
@@ -40,7 +40,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .home-link-box:hover,
